--- a/views/index.erb
+++ b/views/index.erb
@@ -4,5 +4,5 @@
   <input type="text" name="player1">
   <label for="player2">Player 2:</label>
   <input type="text" name="player2">
-  <input type ="submit" button = "Submit">
+  <button type ="submit">Submit</button>
 </form>
