global variables (very bad)

--- a/views/play.erb
+++ b/views/play.erb
@@ -1,2 +1,2 @@
-<%= session['player1'] %> vs <%= session['player2'] %>: 60 HP
+<%= @player1 %> vs <%= @player2 %>: 60 HP
 <a href= "/attack"> Attack!</a>
