refactored code and tests for DRY and format

--- a/views/play.erb
+++ b/views/play.erb
@@ -1,3 +1,2 @@
-<%= @player1 %> vs <%= @player2 %>: 60 HP
-<a href= "/attack"> Attack!</a>
-<%= @player2.name %> : <%= @player2.hit_points %>HP
+<%= @player1 %> vs <%= @player2 %>: <%= @player2.hit_points %>HP
+<a href= '/attack'>Attack!</a>
