create player as global variable. Tests pass

--- a/views/play.erb
+++ b/views/play.erb
@@ -1,2 +1,3 @@
-<%= @player1 %> vs <%= @player2 %>: <%= @player2.hit_points %>HP
+<%= @player1.name %> vs <%= @player2.name %><br>
+<%= @player2.name %>: <%= @player2.hit_points %>HP<br>
 <a href= '/attack'>Attack!</a>
