--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,2 +1,2 @@
-<%= @player1.name %> attacked <%= @player2.name %><br>
-<%= @player2.name %> : <%= @player2.hit_points %>HP
+<%= @game.player1.name %> attacked <%= @game.player2.name %><br>
+<%= @game.player2.name %> : <%= @game.player2.hit_points %>HP
