--- a/views/play.erb
+++ b/views/play.erb
@@ -1,3 +1,3 @@
-<%= @player1.name %> vs <%= @player2.name %><br>
-<%= @player2.name %>: <%= @player2.hit_points %>HP<br>
+<%= @game.player1.name %> vs <%= @game.player2.name %><br>
+<%= @game.player2.name %>: <%= @game.player2.hit_points %>HP<br>
 <a href= '/attack'>Attack!</a>
