--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,2 +1,3 @@
 <%= @game.player1.name %> attacked <%= @game.player2.name %><br>
-<%= @game.player2.name %> : <%= @game.player2.hit_points %>HP
+<%= @game.player2.name %> : <%= @game.player2.hit_points %>HP<br>
+It is <%= @game.player2.name %>'s turn.
