--- a/views/play.erb
+++ b/views/play.erb
@@ -1,3 +1,4 @@
 <%= @game.player1.name %> vs <%= @game.player2.name %><br>
 <%= @game.player2.name %>: <%= @game.player2.hit_points %>HP<br>
+It is <%= @game.current_turn.name%>'s turn.<br>
 <a href= '/attack'>Attack!</a>
